css/vrodos_modern_compiled.css
/* ... */
.vrodos-manager-wrapper :is(.tw-space-y-8 > :not([hidden]) ~ :not([hidden])) {
  --tw-space-y-reverse: 0;
  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
}

.vrodos-manager-wrapper .tw-overflow-hidden {
  overflow: hidden;
}

.vrodos-manager-wrapper .tw-overflow-x-auto {
  overflow-x: auto;
}

.vrodos-manager-wrapper .tw-overflow-y-auto {
  overflow-y: auto;
}

.vrodos-manager-wrapper .tw-truncate {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.vrodos-manager-wrapper .tw-rounded {
  border-radius: 0.25rem;
}

.vrodos-manager-wrapper .tw-rounded-2xl {
  border-radius: 1rem;
}

.vrodos-manager-wrapper .tw-rounded-3xl {
  border-radius: 1.5rem;
}

.vrodos-manager-wrapper .tw-rounded-\[1\.75rem\] {
  border-radius: 1.75rem;
}

.vrodos-manager-wrapper .tw-rounded-\[2\.5rem\] {
  border-radius: 2.5rem;
}

.vrodos-manager-wrapper .tw-rounded-\[2rem\] {
  border-radius: 2rem;
}

.vrodos-manager-wrapper .tw-rounded-\[3rem\] {
  border-radius: 3rem;
}

.vrodos-manager-wrapper .tw-rounded-full {
  border-radius: 9999px;
}

.vrodos-manager-wrapper .tw-rounded-lg {
  border-radius: 0.5rem;
}

.vrodos-manager-wrapper .tw-rounded-md {
  border-radius: 0.375rem;
}

.vrodos-manager-wrapper .tw-rounded-xl {
  border-radius: 0.75rem;
}

.vrodos-manager-wrapper .tw-rounded-t-lg {
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
}

.vrodos-manager-wrapper .tw-border {
  border-width: 1px;
}

.vrodos-manager-wrapper .tw-border-0 {
  border-width: 0px;
}

.vrodos-manager-wrapper .tw-border-2 {
  border-width: 2px;
}

.vrodos-manager-wrapper .tw-border-4 {
  border-width: 4px;
}

.vrodos-manager-wrapper .tw-border-8 {
  border-width: 8px;
}

.vrodos-manager-wrapper .tw-border-b {
  border-bottom-width: 1px;
}

.vrodos-manager-wrapper .tw-border-l {
  border-left-width: 1px;
}

.vrodos-manager-wrapper .tw-border-t {
  border-top-width: 1px;
}

.vrodos-manager-wrapper .tw-border-dashed {
  border-style: dashed;
}

.vrodos-manager-wrapper .tw-border-none {
  border-style: none;
}

.vrodos-manager-wrapper .tw-border-amber-200 {
  --tw-border-opacity: 1;
  border-color: rgb(253 230 138 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-base-300 {
  --tw-border-opacity: 1;
  border-color: var(--fallback-b3,oklch(var(--b3)/var(--tw-border-opacity, 1)));
}

.vrodos-manager-wrapper .tw-border-emerald-100 {
  --tw-border-opacity: 1;
  border-color: rgb(209 250 229 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-emerald-200 {
  --tw-border-opacity: 1;
  border-color: rgb(167 243 208 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-emerald-400\/20 {
  border-color: rgb(52 211 153 / 0.2);
}

.vrodos-manager-wrapper .tw-border-emerald-400\/35 {
  border-color: rgb(52 211 153 / 0.35);
}

.vrodos-manager-wrapper .tw-border-emerald-500 {
  --tw-border-opacity: 1;
  border-color: rgb(16 185 129 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-red-200 {
  --tw-border-opacity: 1;
  border-color: rgb(254 202 202 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-sky-400\/35 {
  border-color: rgb(56 189 248 / 0.35);
}

.vrodos-manager-wrapper .tw-border-slate-100 {
  --tw-border-opacity: 1;
  border-color: rgb(241 245 249 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-slate-200 {
  --tw-border-opacity: 1;
  border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-slate-50 {
  --tw-border-opacity: 1;
  border-color: rgb(248 250 252 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-transparent {
  border-color: transparent;
}

.vrodos-manager-wrapper .tw-border-white {
  --tw-border-opacity: 1;
  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-white\/10 {
  border-color: rgb(255 255 255 / 0.1);
}

.vrodos-manager-wrapper .tw-border-white\/20 {
  border-color: rgb(255 255 255 / 0.2);
}

.vrodos-manager-wrapper .tw-border-white\/5 {
  border-color: rgb(255 255 255 / 0.05);
}

.vrodos-manager-wrapper .tw-border-white\/50 {
  border-color: rgb(255 255 255 / 0.5);
}

.vrodos-manager-wrapper .tw-border-white\/60 {
  border-color: rgb(255 255 255 / 0.6);
}

.vrodos-manager-wrapper .tw-border-b-slate-900 {
  --tw-border-opacity: 1;
  border-bottom-color: rgb(15 23 42 / var(--tw-border-opacity, 1));
}

.vrodos-manager-wrapper .tw-border-t-transparent {
  border-top-color: transparent;
}

.vrodos-manager-wrapper .tw-bg-amber-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(254 243 199 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-amber-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(255 251 235 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-amber-500 {
  --tw-bg-opacity: 1;
  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-base-100 {
  --tw-bg-opacity: 1;
  background-color: var(--fallback-b1,oklch(var(--b1)/var(--tw-bg-opacity, 1)));
}

.vrodos-manager-wrapper .tw-bg-base-200 {
  --tw-bg-opacity: 1;
  background-color: var(--fallback-b2,oklch(var(--b2)/var(--tw-bg-opacity, 1)));
}

.vrodos-manager-wrapper .tw-bg-black {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-black\/40 {
  background-color: rgb(0 0 0 / 0.4);
}

.vrodos-manager-wrapper .tw-bg-blue-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(239 246 255 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-emerald-100 {
  --tw-bg-opacity: 1;
  background-color: rgb(209 250 229 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-emerald-400 {
  --tw-bg-opacity: 1;
  background-color: rgb(52 211 153 / var(--tw-bg-opacity, 1));
}

.vrodos-manager-wrapper .tw-bg-emerald-50 {
  --tw-bg-opacity: 1;
  background-color: rgb(236 253 245 / var(--tw-bg-opacity, 1));
}
/* ... */

